--- a/mysite/todos/templates/todos/delete.html
+++ b/mysite/todos/templates/todos/delete.html
@@ -21,7 +21,7 @@
         <li><a href="{% url 'todos:create'%}"> ▷ Todoを作成する😉</a></li>
         <li><a href="{% url 'todos:priolity'%}"> ▷ 優先度順リスト👑</a></li>
     </ul>
-    <div>
+    <div class="margin_base">
         <h1 class="menu">✅Todo削除完了</h1>
         <div>
             <p class="attention">削除しました！<br>Todo完了ご苦労様です！</p>
