--- a/mysite/todos/templates/todos/create_alert.html
+++ b/mysite/todos/templates/todos/create_alert.html
@@ -22,14 +22,12 @@
         <li><a href="{% url 'todos:create'%}"> ▷ Todoを作成する😉</a></li>
         <li><a href="{% url 'todos:priolity'%}"> ▷ 優先度順リスト👑</a></li>
     </ul>
-    <div>
+    <div class="margin_base">
         <h1 class="menu">❌Todo作成エラー</h1>
-        <div class="time_error">
-            <p class="attention">入力した「締め切り」が今より前の日時です。<br>申し訳ございませんが、最初から入力し直してください。</p>
-            <img class="image" src="{% static 'todos/images/sorry2.png' %}" alt="ごめんなさい" width="250">
-        </div>
 
-
+        <p class="alert margin_second">入力した「締め切り」が今より前の日時です。<br>申し訳ございませんが、最初から入力し直してください。</p>
+        <img class="image_sorry" src="{% static 'todos/images/sorry2.png' %}" alt="ごめんなさい" width="300">
+        <p></p>
         <a href="{% url 'todos:create' %}">◁ Todo作成画面へ移動</a>
         <p></p>
         <a href="{% url 'todos:index' %}">◁ ホームへ移動</a>
