--- a/mysite/todos/templates/todos/create_completion.html
+++ b/mysite/todos/templates/todos/create_completion.html
@@ -23,6 +23,19 @@
         <li><a href="{% url 'todos:priolity'%}"> ▷ 優先度順リスト👑</a></li>
     </ul>
     <div class="margin_base">
+        <script>
+            if (performance.navigation.type == 1) {
+                document.write("<p>エラーが発生しました。</p>");
+
+            }
+            else {
+                document.write(
+
+
+                )
+
+            }
+        </script>
         <h1 class="menu">🌞Todo作成完了</h1>
 
         <table class="create_fin">
