--- a/mysite/todos/templates/todos/error.html
+++ b/mysite/todos/templates/todos/error.html
@@ -21,6 +21,7 @@
         <li><a href="{% url 'todos:index'%}">▷ ホーム🏡</a></li>
         <li><a href="{% url 'todos:create'%}"> ▷ Todoを作成する😉</a></li>
         <li><a href="{% url 'todos:priolity'%}"> ▷ 優先度順リスト👑</a></li>
+        <li><a href="{% url 'todos:detail_list'%}"> ▷ 詳細一覧📜</a></li>
     </ul>
     <div class="margin_base">
         <h1 class="menu">❌予期せぬエラー</h1>
